# useful-tools

./: LICENSE  README.md  claude_interaction_steps.md
time-tracker-app/: .gitignore  README.md  claude_interaction_steps.md  pyproject.toml
time-tracker-app/app/: API_CONTRACT.md  __init__.py  api.py  config.py  db.py  deps.py  errors.py  main.py  repo.py  schema.py  schemas.py
time-tracker-app/app/routers/: __init__.py  categories.py  entries.py  exports.py  reports.py  settings.py  tags.py  timer.py  today.py
time-tracker-app/design/: DESIGN_SYSTEM.md  screens.md  tokens.css
time-tracker-app/frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
time-tracker-app/frontend/src/: App.tsx  index.css  main.tsx
time-tracker-app/frontend/src/api/: categories.ts  client.test.ts  client.ts  entries.ts  errors.ts  reports.test.ts  reports.ts  settings.test.ts  settings.ts  tags.ts  timer.ts  today.ts  types.ts
time-tracker-app/frontend/src/hooks/: useLiveTimer.ts  usePeriodEntries.test.ts  usePeriodEntries.ts  useReportSummary.test.ts  useReportSummary.ts  useRunningTimer.ts  useSettings.test.ts  useSettings.ts
time-tracker-app/frontend/src/utils/: aggregate.test.ts  aggregate.ts  categoryColor.ts  dateRange.ts  duration.ts  (+1 more)
time-tracker-app/tests/: _time_helpers.py  conftest.py  test_categories.py  test_e2e_lifecycle.py  test_entries.py  test_error_envelope.py  test_exports.py  test_health.py  test_narrative.py  test_reports.py  test_schema.py  test_settings.py  test_tags.py  test_timer.py  test_today.py
(+42 files in other folders)
